🐛 Fixed package.json typos

--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
     "parcel-bundler": "^1.12.3",
-    "typescript": "^3.5.3"
-  },
-  "peerDependencies": {
+    "typescript": "^3.5.3",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "eslint-config-typescript": "^3.0.0",
