--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,16 @@
 {
   "compilerOptions": {
-    "module": "esnext",
+    "module": "commonjs",
     "target": "es2015",
     "moduleResolution": "node",
     "lib": ["dom", "esnext"],
     "strict": true,
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "sourceMap": false,
     "removeComments": false,
-    "types": ["@types/node", "src/process.d.ts"]
-  }
+    "declaration": true,
+    "outDir": "lib"
+  },
+  "files": ["src/index.ts"]
 }
