--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,13 +7,14 @@ parserOptions:
 extends:
   - teamlab/typescript
 rules:
-  no-console: 'off'
-  class-methods-use-this: 'off'
-  no-param-reassign: 'off'
-  complexity: 'off'
-  no-extra-parens: 'off'
-  import/no-unused-modules: 'off'
-  import/exports-last: 'off'
-  import/prefer-default-export: 'off'
-  '@typescript-eslint/unbound-method': 'off'
-  '@typescript-eslint/no-extra-parens': error
+  no-console: "off"
+  class-methods-use-this: "off"
+  no-param-reassign: "off"
+  complexity: "off"
+  no-extra-parens: "off"
+  import/no-unused-modules: "off"
+  import/exports-last: "off"
+  import/prefer-default-export: "off"
+  "@typescript-eslint/unbound-method": "off"
+  "@typescript-eslint/no-extra-parens": error
+  "@typescript-eslint/generic-type-naming": "off"
