--- a/package.json
+++ b/package.json
@@ -28,20 +28,19 @@
     "release": "yarn version --patch && yarn build && yarn publish && git push origin --tags"
   },
   "devDependencies": {
-    "@lollipop-onl/axios-logger": "^0.1.11",
     "@team-lab/eslint-config": "^0.1.1",
-    "@types/node": "^12.6.8",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
-    "concurrently": "^4.1.1",
-    "cross-env": "^5.2.0",
-    "eslint": "^6.1.0",
+    "@types/node": "^14.14.26",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.19.0",
     "eslint-config-typescript": "^3.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "parcel-bundler": "^1.12.3",
-    "typescript": "^3.5.3"
+    "eslint-plugin-import": "^2.22.1",
+    "parcel-bundler": "^1.12.4",
+    "typescript": "^4.1.5"
   },
-  "dependencies": {
-    "axios": "^0.19.0"
+  "peerDependencies": {
+    "axios": "^0.21.1"
   }
 }
