--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
+    "axios": "^0.21.1",
     "concurrently": "^6.2.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
